--- a/contacto.html
+++ b/contacto.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilos/estilo.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="estilos/estilosContacto.css">
     <script src="https://kit.fontawesome.com/8cc86c3a0a.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -16,22 +16,23 @@
           <a href="index.html"> 
             <i class="fas fa-camera logo"></i>
           </a>
-          <h1 >das Foto</h1>
+            <h1 >das Foto</h1>
         </div>
         <nav class = "col-xl-8   cold-md-8 col-lg-8 col-sm-2 navegador">
             <ul>
                 <li> <a href="index.html">HOME</a>  </li>
                 <li>   <a href="contacto.html">CONTACTO</a>  </li>
-                <li> <a href="trabaja.html">TRABAJA</a> </li>
+                <li> <a href="trabaja.html">TRABAJA CON NOSOTROS</a> </li>
+                <li><a href="servicios.html">SERVICIOS</a></li>
                 <li>  <a href="galeria.html">GALERIA</a>   </li>
-                <li> <a href="acerca.html">ACERCA DE NOSOTROS</a> </li>
-            </ul>
+                <li > <a href="acerca.html">ACERCA DE NOSOTROS</a> </li>
 
+              </ul>
+            
         </nav>
-
+      
     </div>
 </header>
-
 
 
 <section>
@@ -113,5 +114,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
+    <script src="js/funciones-index.js"></script>
 </body>
 </html>
